finally fixed the page wrapping problem on mobile.

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -73,3 +73,9 @@ H1 {
 H2 {
   font-size: 1.5em;
 }
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
